# Chat-TestBot

./: README.md  main.py  pyproject.toml
scout/: chatbot.py
scout/agents/: playwright_test_generator.py
